--- a/src/styles/syntax-highlight.css
+++ b/src/styles/syntax-highlight.css
@@ -52,6 +52,7 @@
 }
 
 .highlighted-editor-backdrop code {
+  display: block;
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
